# MEMO-Appflow

./: .gitattributes  .gitignore  README.md  appflow_like_preloader  appflow_like_preloader.c  feasibility report.aux  feasibility report.tex  preload_interactive  preload_interactive.c  probe.sh  realphone.md  redbull-debug-btf.fragment  report.md  session  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/dataset_cache/: sample_usage.csv  sample_usage.json
app/src/main/cpp/: CMakeLists.txt  maple_jni.cpp
app/src/main/cpp/TransformerPredictor/: CMakeLists.txt  Makefile  cmake_install.cmake  core.52616  example.cpp  example.json
app/src/main/cpp/TransformerPredictor/include/: inferencer.h  model.h  ops.h  tensor.h  transformer_predictor.h  weight_loader.h
app/src/main/cpp/TransformerPredictor/src/: inferencer.cpp  model.cpp  ops.cpp  tensor.cpp  transformer_predictor.cpp  weight_loader.cpp
app/src/main/cpp/TransformerPredictor/weights/: manifest.txt
app/src/main/cpp/bridge/: memo_native_bridge.cpp  memo_native_bridge.h
app/src/main/cpp/monitor/: native_monitor_hooks.cpp  native_monitor_hooks.h
app/src/main/cpp/policy/: native_policy_utils.cpp  native_policy_utils.h
app/src/main/cpp/predictor/: native_score_utils.cpp  native_score_utils.h
app/src/main/cpp/util/: native_logger.cpp  native_logger.h
app/src/main/res/drawable/: badge_bg.xml  button_primary_bg.xml  button_tonal_bg.xml  hero_panel.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_widget_placeholder.xml  metric_card_hint.xml  metric_card_keep.xml  metric_card_neutral.xml  metric_card_prewarm.xml  prediction_row_bg.xml  screen_bg.xml  success_badge.xml  surface_panel.xml  surface_panel_soft.xml  warning_badge.xml  widget_action_pill.xml  widget_bg.xml  widget_metric_module.xml  widget_panel_bg.xml  widget_prediction_row.xml
app/src/main/res/layout/: activity_dashboard.xml  activity_main.xml  activity_settings.xml  widget_memo.xml  widget_memo_recommend.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: memo_widget_info.xml
benchmark/: README.md
configs/: default_dataset_manifest.json
dataset referenced/: LSApp.md  README.md
docs/: 2026-05-07_device_pipeline_worklog.md  2026-05-07_jingyi_teammate_update.md  android_kernel_ebpf_config.md  appflow_reproduction_plan.md  architecture.md  dataset.md  ebpf_report.md  experiment_protocol.md  feasibility-report.md  metrics.md  next_steps_roadmap_2026-05-06.md  real_user_ebpf_experiments.md  research-report.md  synthetic_ablation_report.md  system_integration_plan.md
docs/meeting logs/: conference_1.md  conference_3.md  conference_5.md
docs/meeting_logs/: conference_2.md  conference_4.md  conference_6.md  conference_7.md  conference_8.md
docs/notes/: maple_context_from_ebpf_report.md  next_steps_roadmap.md  synthetic_data_design.md
docs/real_device_experiments/: README.md
docs/real_device_experiments/real_ebpf_ablation/: README.md  latest_maple_scenario.json  latest_pipeline_latency.json  latest_real_ablation.json  latest_real_user_experiment.txt  memo_pipeline.xml  real_ebpf_ablation_result_interpretation.md  real_user_1778095657670.trace
docs/references/: REORGANIZATION.md
docs/references/datasets/: LSApp.md
docs/references/native/: TransformerPredictor.md
docs/references/papers/: ATPP.bib  README.md
docs/references/scripts/: tracing-feasibility-report.md
docs/report_versions/: 2026-03-30_app_prototype_feasibility.md  2026-04-29_ebpf_reasoning_collector.md  2026-04-29_ftrace_syscalls_kernel_enablement.md  2026-04-29_surfaceflinger_maple_end_to_end.md  README.md
docs/theoretical_ablation_experiment/: README.md  synthetic_ablation_report.md
llm/maple/: README.md
llm/maple/demo/: maple_demo.cpp
llm/maple/examples/: scenarios.json
llm/maple/llama.cpp/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  llama.pc
llm/maple/llama.cpp/common/: Makefile  cmake_install.cmake
llm/maple/llama.cpp/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
llm/maple/llama.cpp/examples/batched/: CTestTestfile.cmake  Makefile  cmake_install.cmake
llm/maple/llama.cpp/examples/convert-llama2c-to-ggml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
llm/maple/llama.cpp/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
llm/maple/llama.cpp/pocs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
llm/maple/llama.cpp/src/: Makefile  cmake_install.cmake
llm/maple/llama.cpp/tests/: CTestTestfile.cmake  cmake_install.cmake
llm/maple/llama.cpp/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
llm/maple/maple_engine/: CMakeLists.txt  Makefile  cmake_install.cmake
llm/maple/maple_engine/include/: llama_backend.h  maple_engine.h  maple_types.h  prompt_builder.h  result_parser.h
llm/maple/maple_engine/src/: llama_backend.cpp  maple_engine.cpp  prompt_builder.cpp  result_parser.cpp
research paper referenced/: ATPP.md  README.md
scripts/: README.md  analyze_replay_results.ps1  correlate_user_driven.py  input_tap.py  seed_sample_dataset.ps1
scripts/android_ebpf/: README.md  ablation_batch.cpp  ablation_runner.py  android_ebpf_collect.py  dataset_synthesizer.py  maple_context_from_ebpf.py  traceprint_to_jsonl.py
scripts/android_ebpf/bpf/: memo_events.bpf.c  memo_traceprint.bpf.c
scripts/android_ebpf/bpftrace/: bpftrace  bpftrace_wrapper.c  memo_appflow_trace.bt
scripts/android_ebpf/configs/: llm_request.schema.json  service_categories.json  workload_scenarios.json
scripts/android_ebpf/fixtures/: sample_actions.json  sample_trace.tsv  sample_uid_map.json
scripts/android_ebpf/kernel/: memo_android_ebpf.config  memo_android_ebpf_build.fragment
scripts/android_ebpf/tests/: test_android_ebpf_collect.py  test_maple_context_from_ebpf.py
scripts/tracing_the_processes/: macos_fork_exit_only.d  macos_process2.d  test.d  trace_exec.bt  trace_exec.d
tracing_the_processes/: macos_process_lifecycle.d  user_execs.d
(+261 files in other folders)
